Linking button to Resume

--- a/homepage.html
+++ b/homepage.html
@@ -81,7 +81,9 @@
             <p style="color:rgb(199, 199, 199);">Click to display the resume:</p>
             <!-- Use a button to pause/play the video with JavaScript -->
             <button id="myBtn" onclick="myFunction()">Lena</button>
-            <button id="myBtn" onclick="myFunction()">Sara</button>        
+            <a href="rush.html">
+                <button id="myBtn" onclick="myFunction()">Sara</button>
+            </a>        
         </center>
       </div>
 
