--- a/homepage.html
+++ b/homepage.html
@@ -83,7 +83,10 @@
             <button id="myBtn" onclick="myFunction()">Lena</button>
             <a href="rush.html">
                 <button id="myBtn" onclick="myFunction()">Sara</button>
-            </a>        
+            </a>
+            <a href="rush.html">
+                <button id="myBtn" onclick="myFunction()">Nadzeya</button>
+            </a>       
         </center>
       </div>
 
