--- a/homepage.html
+++ b/homepage.html
@@ -80,7 +80,9 @@
             <h1 style="padding-top: 200px; color:#ddd">On-line Resumes</h1>
             <p style="color:rgb(199, 199, 199);">Click to display the resume:</p>
             <!-- Use a button to pause/play the video with JavaScript -->
-            <button id="myBtn" onclick="myFunction()">Lena</button>
+            <a href="index.html">
+                <button id="myBtn" onclick="myFunction()">Lena</button>
+            </a>
             <a href="rush.html">
                 <button id="myBtn" onclick="myFunction()">Sara</button>
             </a>
